# homesec_witty

./: .gitignore  CMakeLists.txt  README.md  ffserver.conf  homesec_witty.kdev4  prepare-target.gdb  prepare-target.sh  run.sh  transfer-target.sh
docroot/: video.asx
src/: .gitignore  CMakeLists.txt  Session.h  User.h  main.cpp  session.cpp
